# OpenGL_Projet

./: CMakeLists.txt
src/: main.cpp
src/core/: Engine.cpp  Engine.h
src/renderer/: Shader.cpp  Shader.h
src/shaders/: fragmentShader.glsl  fragmentShader2.glsl  vertexShader.glsl
